hphp/hack/test/sound_dynamic/typing/map_create.bad.php.exp
File "map_create.bad.php", line 4, characters 3-24:
The keys of this `Map` are incompatible (Typing[4110])
  File "map_create.bad.php", line 4, characters 7-9:
  Expected `int`
  File "map_create.bad.php", line 3, characters 12-18:
  But got `arraykey`
