hphp/hack/test/sound_dynamic/typing/map_create.bad.php
<?hh

function f(dynamic $d) : void {
  Map<int, int>{$d => 1};
}
